src/components/Navbar/Navbar.module.scss
.navbar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  font-family: sans-serif;

  height: 60px;
  margin: 16px;

  & > * {
    flex: 1;
  }

  // Search bar
  .search-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;

    .icon {
      position: absolute;
      left: 25px;
      color: #5f6368;
    }

    input {
      background-color: #dbdbdb;

      padding: 12px 18px;
      padding-left: 30px; // Gives space for the search icon.

      border-radius: 100px;
      border: 1px solid transparent;
    }
  }

  // Logo
  a {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;

    height: 100%;

    img {
      height: 100%;
    }
  }

  // Upload Button
  .button-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;

    .button {
      border-radius: 100px;
      border: none;

      padding: 12px 18px;
      font-size: 1rem;

      background-color: #00b6ef;
      color: white;

      cursor: pointer;
    }
    .button:hover {
      background-color: #104b99;
    }
  }
}

/* Prevents text highlighting with cursor dragging */
.no-highlight {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none;
  -webkit-tap-highlight-color: transparent;
}

// Removes link decorations from text
.remove-link-style {
  text-decoration: none;
  color: black;
}

/* Stylings for desktops */
@media screen and (min-width: 600px) {
  .navbar {
    .search-container {
      input {
        width: 100%;
      }
    }
  }
}

